--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.10'
 
 services:
   web:
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     command: gunicorn django_docker_example_app.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - ./django_docker_example_app/:/usr/src/django_docker_example_app/
+      - static_volume:/home/django-user/web/staticfiles
     env_file:
       - ./.env
     depends_on:
@@ -22,14 +22,15 @@ services:
       - ./.env.db
   nginx:
     build: ./nginx
+    volumes:
+      - static_volume:/home/django-user/web/staticfiles
     ports:
       - '1337:80'
     depends_on:
       - web
 
-
-
 volumes:
   postgres_data:
+  static_volume:
 
 
