--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -43,6 +43,7 @@ ENV HOME=/home/django-user
 ENV APP_HOME=/home/django-user/web
 RUN mkdir $APP_HOME
 RUN mkdir $APP_HOME/staticfiles
+RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
 # install dependencies
