--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,12 +1,5 @@
-###########
-# BUILDER #
-###########
-
 # pull official base image
-FROM python:3.10-alpine as builder
-
-# set work directory
-WORKDIR /usr/src/backend
+FROM python:3.10-alpine
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -14,23 +7,6 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apk add postgresql-dev gcc python3-dev musl-dev
-
-# lint
-RUN pip install --upgrade pip
-RUN pip install flake8==3.9.2
-COPY . .
-RUN flake8 --ignore=E501,F401 .
-
-# install dependencies
-COPY ./requirements.txt .
-RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/backend/wheels -r requirements.txt
-
-#########
-# FINAL #
-#########
-
-# pull official base image
-FROM python:3.10-alpine
 
 # create directory for the django-user user
 RUN mkdir -p /home/django-user
@@ -47,10 +23,9 @@ RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN apk update && apk add libpq
-COPY --from=builder /usr/src/backend/wheels /wheels
-COPY --from=builder /usr/src/backend/requirements.txt .
-RUN pip install --no-cache /wheels/*
+COPY ./requirements.txt .
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
 # copy entrypoint.sh
 COPY ./entrypoint.sh .
@@ -62,7 +37,7 @@ COPY . $APP_HOME
 # chown all the files to the app user
 RUN chown -R django-user:django-user $APP_HOME
 
-# change to the app user
+# change to the django-user user
 USER django-user
 
 # run entrypoint.sh
