--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,10 +1,10 @@
-version: '3.10'
+version: '3.8'
 
 services:
   web:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     command: gunicorn django_docker_example_app.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/django-user/web/staticfiles
@@ -22,7 +22,9 @@ services:
     env_file:
       - ./.env.db
   nginx:
-    build: ./nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.dev
     volumes:
       - static_volume:/home/django-user/web/staticfiles
       - media_volume:/home/django-user/web/mediafiles
