--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -23,7 +23,9 @@ services:
       - ./.env.db
   nginx-proxy:
     container_name: nginx-proxy
-    build: ./nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.prod
     restart: always
     ports:
       - '443:443'
@@ -35,7 +37,6 @@ services:
       - html:/usr/share/nginx/html
       - vhost:/etc/nginx/vhost.d
       - /var/run/docker.sock:/tmp/docker.sock:ro
-
     depends_on:
       - web
   nginx-proxy-letsencrypt:
